--- a/vamiga/vAmiga.html
+++ b/vamiga/vAmiga.html
@@ -180,7 +180,7 @@
 								d="M8 2a.5.5 0 0 1 .5.5V4a.5.5 0 0 1-1 0V2.5A.5.5 0 0 1 8 2M3.732 3.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707M2 8a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 8m9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5m.754-4.246a.39.39 0 0 0-.527-.02L7.547 7.31A.91.91 0 1 0 8.85 8.569l3.434-4.297a.39.39 0 0 0-.029-.518z" />
 							<path d="M6.664 15.889A8 8 0 1 1 9.336.11a8 8 0 0 1-2.672 15.78zm-4.665-4.283A11.95 11.95 0 0 1 8 10c2.186 0 4.236.585 6.001 1.606a7 7 0 1 0-12.002 0"
 								fill-rule=evenodd />
-						</svg></button> <button class="btn btn-sm icon" type=button
+						</svg></button> <button class="btn btn-sm icon" type=button style="display:none"
 						id=button_take_snapshot data-toggle=tooltip data-placement=top
 						title="save snapshot, workspace or export disk"><svg
 							class="bi bi-box-arrow-in-down" fill=currentColor height=auto
@@ -192,7 +192,7 @@
 								fill-rule=evenodd />
 							<path d="M1.5 13.5A1.5 1.5 0 0 0 3 15h10a1.5 1.5 0 0 0 1.5-1.5v-8A1.5 1.5 0 0 0 13 4h-1.5a.5.5 0 0 0 0 1H13a.5.5 0 0 1 .5.5v8a.5.5 0 0 1-.5.5H3a.5.5 0 0 1-.5-.5v-8A.5.5 0 0 1 3 5h1.5a.5.5 0 0 0 0-1H3a1.5 1.5 0 0 0-1.5 1.5v8z"
 								fill-rule=evenodd />
-						</svg></button> <span data-toggle=modal
+						</svg></button> <span data-toggle=modal style="display:none"
 						data-target=#snapshotModal><button class="btn btn-sm icon" type=button
 							id=button_snapshots data-toggle=tooltip data-placement=top
 							title="snapshot / workspace browser"><svg
@@ -212,7 +212,7 @@
 								width=1.6em xmlns=http://www.w3.org/2000/svg>
 								<path
 									d="M2.244 13.081l.943-2.803H6.66l.944 2.803H8.86L5.54 3.75H4.322L1 13.081h1.244zm2.7-7.923L6.34 9.314H3.51l1.4-4.156h.034zm9.146 7.027h.035v.896h1.128V8.125c0-1.51-1.114-2.345-2.646-2.345-1.736 0-2.59.916-2.666 2.174h1.108c.068-.718.595-1.19 1.517-1.19.971 0 1.518.52 1.518 1.464v.731H12.19c-1.647.007-2.522.8-2.522 2.058 0 1.319.957 2.18 2.345 2.18 1.06 0 1.716-.43 2.078-1.011zm-1.763.035c-.752 0-1.456-.397-1.456-1.244 0-.65.424-1.115 1.408-1.115h1.805v.834c0 .896-.752 1.525-1.757 1.525z" />
-							</svg></button> </span><button class="btn btn-sm icon"
+							</svg></button> </span><button class="btn btn-sm icon" style="display:none"
 						type=button id=button_custom_key data-toggle=tooltip data-placement=top
 						title="action buttons"><svg class="bi bi-plus" fill=currentColor
 							height=auto viewBox="0 0 16 16" width=1.6em
@@ -222,7 +222,7 @@
 							<path d="M7.5 8a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1H8.5V12a.5.5 0 0 1-1 0V8z"
 								fill-rule=evenodd />
 						</svg></button>
-					<form id=theFileInput>
+					<form id=theFileInput style="display:none" >
 						<div class=px-1 id=drop_zone data-placement=bottom data-toggle=tooltip
 							title="drop .adf, .dms, .exe, .hdf, .vAmiga, .st or .zip files into here, or just click into the drop zone">
 							file slot</div><input id=filedialog type=file name=theFileDialog
